--- a/index.html
+++ b/index.html
@@ -9,28 +9,20 @@
 </head>
 <body>
 
-    <form class="w-75 mx-auto">
-        <p class="mt-3">名前</p>
+    <form class="w-75 mx-auto">  
+        <p class="mt-3">本名（ひらがな）</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" placeholder="" required>
         </div>
-        <p class="mt-3">腕立て</p>
+        <p class="mt-3">ニックネーム</p>
         <div>
-            <input class="form-control w-100 mt-1" name="udetate" required>
+            <input class="form-control w-100 mt-1" name="name2" >
         </div>
-        <p class="mt-3">腹筋</p>
+        <p class="mt-3">会員番号</p>
         <div>
-            <input class="form-control w-100 mt-1" name="fukkin" required>
+            <input class="form-control w-100 mt-1" name="no" required>
         </div>
-        <p class="mt-3">背筋</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="haikin" required>
-        </div>
-        <p class="mt-3">スクワット</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="sukuwat" required>
-        </div>
-        <input type="submit" class="mt-4 btn btn-primary" value="送信">
+        <input type="submit" class="mt-4 btn btn-primary" value="登録">
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -72,11 +64,9 @@
         $(function () {
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
-                const udetate = $('input[name="udetate"]').val();
-                const fukkin  = $('input[name="fukkin"]').val();
-                const haikin  = $('input[name="haikin"]').val();
-                const sukuwat = $('input[name="sukuwat"]').val();
-                const msg = `${name}\n${udetate}\n${fukkin}\n${haikin}\n${sukuwat}`;
+                const name2 = $('input[name="name2"]').val();
+                const no = $('input[name="no"]').val();
+                const msg = `${name}\n${name2}\n${no}`;
                 sendText(msg);
                 return false;
             });
