--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input class="form-control col mt-1" name="name2" placeholder="" required="">
         </div>
         -->
-        <p class="mt-3">氏名(漢字)</p>
+        <p class="mt-3">氏名（漢字）</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" required>
         </div>
@@ -74,7 +74,7 @@
                   return false;
                 }
                 const msg = `${name}\n${no}`;
-                if(window.confirm('氏名(漢字)：'+name+'\n会員番号：'+no+'\n\nこの内容で間違いないですか？')){
+                if(window.confirm('氏名（漢字）：'+name+'\n会員番号：'+no+'\n\nこの内容で間違いないですか？')){
                   sendText(msg);
                 }
                 return false;
