--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         -->
         <p id="liff-message"></p>
-        <p id="liff-message2"></p>
+        <p id="liff-message2">test</p>
         <p class="mt-3">氏名(漢字)</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" required>
