--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               
               pElement2.innerHTML = lineId
             }else{
-              document.body.innerHTML = 'LINEで開いてください'
+              //document.body.innerHTML = 'LINEで開いてください'
             }
             
             divPage.appendChild(pElement);            
