--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 liff.getProfile()
                   .then(profile=>{
                     lineId = profile.userId;
-                    pElement2.innerHTML = lineId
+                    pElement2.innerHTML = '${lineId}'
                   })
               })
               .then(()=>{
                    alert("test")
-                  initializeApp();
+                  // initializeApp();
               }) 
               .catch((err) => {
                 console.log('LIFF Initialization failed ', err);
