--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         -->
         <p id="liff-message"></p>
+        <p id="liff-message2"></p>
         <p class="mt-3">氏名(漢字)</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" required>
@@ -44,6 +45,7 @@
             
             //p要素の取得
             const pElement = document.getElementById('liff-message');
+            const pElement2 = document.getElementById('liff-message2');
             
             //LIFFで立ち上げているかどうかの判定
             if(liff.isInClient()){
@@ -62,7 +64,7 @@
                   })
               })
               .then(()=>{
-                   alert("test")
+                   //alert("test")
                   // initializeApp();
               }) 
               .catch((err) => {
