--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
 </head>
 <body>
-
-    <form class="w-75 mx-auto">  
-        <!--
-        <p class="mt-3">氏名（漢字）</p>
-        <div class="row" style="margin:0px">
-            <input class="form-control col mt-1" name="name1" placeholder="" required="">
-            <input class="form-control col mt-1" name="name2" placeholder="" required="">
+    <span id="area"></span>
+    <!--
+        <div style="border-style: double;margin: 10px;padding: 10px;">
+        <div style="background-color: #99FF99;">
+        <h6><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h6>
+        <div class="" style="text-align: center;">会員番号：■</div>
         </div>
-        -->
+        </div>
+    -->
+    <!--
+    <form class="w-75 mx-auto">  
         <p id="liff-message"></p>
         <p id="liff-message2"></p>
         <p class="mt-3">氏名(漢字)</p>
@@ -29,14 +31,16 @@
         </div>
         <input type="submit" class="mt-4 btn btn-primary" value="登録">
     </form>
-
+    -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script src='main.js'></script>    
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>
+        const endpoint = "https://script.google.com/macros/s/AKfycbxUcvRnfUJBgd5B-lKOPXCjwZRBszTOEopEXLVEPk4y7LQTgW14fbV1ymxxf81bMB9u6g/exec";
 
         $(document).ready(function () {
             const liffId = "1657758889-bBMyjVOA";
@@ -60,7 +64,29 @@
                 liff.getProfile()
                   .then(profile=>{
                     lineId = profile.userId;
-                    pElement2.innerHTML = "${lineId}" + " " + lineId
+                    $.ajax({
+                        type: 'GET',
+                        url: endpoint,
+                        dataType: 'jsonp',
+                        data: {
+                          text: lineId
+                        },
+                        success: out => {
+                          if(out.rslt=="###"){
+                             pElement2.innerHTML = '1度のみの登録となります。'
+                             document.getElementById("area").innerHTML = '<form class="w-75 mx-auto"><p id="liff-message"></p><p id="liff-message2"></p><p class="mt-3">氏名(漢字)</p><div><input class="form-control w-100 mt-1" name="name" required></div><p class="mt-3">会員番号</p><div><input class="form-control w-100 mt-1" name="no" placeholder="会員証の番号を入力" required></div><input type="submit" class="mt-4 btn btn-primary" value="登録"></form>';
+                          }else{
+                             document.body.style.backgroundColor = "#99FF99";
+                             var str1 = '<div style="border-style: double;margin: 10px;padding: 10px;"><div style="background-color: #99FF99;"><h6><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h6><div class="" style="text-align: center;">会員番号：'
+                             var str2 = '</div></div></div>'
+                             document.getElementById("area").innerHTML = str1 + out.rslt + str2
+                          }
+                        },
+                        error: function(){
+                          document.body.innerHTML = ''
+                          alert("通信エラー");
+                        }
+                    });
                   })
               })
               .then(()=>{
@@ -74,7 +100,6 @@
               //document.body.innerHTML = 'LINEで開いてください'
             }
             
-            divPage.appendChild(pElement);            
         })
 
         function initializeLiff(liffId) {
