--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 console.log('LIFF Initialization failed ', err);
               });
             }else{
-              //document.body.innerHTML = 'LINEで開いてください'
+              document.body.innerHTML = 'LINEで開いてください'
             }
             
         })
