--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                   lineId = profile.userId;
                 })
                 .then(()=>{
-                  document.body.innerHTML = 'bbbb' + lineId    
+                  document.body.innerHTML = 'bbbb id' + lineId    
                 })
               })
               .then(()=>{
-                  document.body.innerHTML = 'aaaa' + lineId
+                  document.body.innerHTML = 'aaaa id' + lineId
                    alert(lineId);
                   // initializeApp();
               }) 
