--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             //p要素の取得
             const pElement = document.getElementById('liff-message');
             const pElement2 = document.getElementById('liff-message2');
-                    ajaxConn("aaa");        
+                      
             //LIFFで立ち上げているかどうかの判定
             if(liff.isInClient()){
               pElement.innerHTML='初回登録実施画面'
@@ -68,8 +68,8 @@
                   lineId = profile.userId;
                 })
                 .then(()=>{
-                  document.body.innerHTML = 'aaaa id' + lineId    
-                    alert("ajax処理開始");
+                  //document.body.innerHTML = 'aaaa id' + lineId    
+                  ajaxConn(lineId);
 
                 })
                 .catch((err) => {
