--- a/index.html
+++ b/index.html
@@ -97,8 +97,13 @@
                              document.getElementById("area").innerHTML = '<form class="w-75 mx-auto"><p id="liff-message"></p><p id="liff-message2"></p><p class="mt-3">氏名(漢字)</p><div><input class="form-control w-100 mt-1" name="name" required></div><p class="mt-3">会員番号</p><div><input class="form-control w-100 mt-1" name="no" placeholder="会員証の番号を入力" required></div><input type="submit" class="mt-4 btn btn-primary" value="登録"></form>';
                           }else{
                              document.getElementById('liff-message').innerHTML = '';
+                             if(out.rslt == "VVIP"){
+                                 document.body.style.backgroundColor = "#FFD700";                                 
+                             }else{
+                                 document.body.style.backgroundColor = "#99FF99";
+                             }
                              document.body.style.backgroundColor = "#99FF99";
-                             var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10%;"><div style="background-color: #99FF99;"><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h6><div class="" style="text-align: center; margin-top: 5%;">会員番号：'
+                             var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h6><div class="" style="text-align: center; margin-top: 5%;">会員番号：'
                              var str2 = '</div></h6></div></div>'
                              document.getElementById("area").innerHTML = str1 + out.rslt + str2
                           }
