--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                                  document.body.style.backgroundColor = "#99FF99";
                              }
                              document.body.style.backgroundColor = "#99FF99";
-                             var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h6><div class="" style="text-align: center; margin-top: 5%;">会員番号：'
-                             var str2 = '</div></h6></div></div>'
+                             var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10% 5%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h5><div class="" style="text-align: center; margin-top: 10%;">会員番号：'
+                             var str2 = '</div></h5></div></div>'
                              document.getElementById("area").innerHTML = str1 + out.rslt + str2
                           }
                         },
