--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script>
         var lineId = ''
         var lineName = ''
-        const endpoint = "https://script.google.com/macros/s/AKfycbxgtx2uNOyU_xgFGy8DiL8UHPWGN65eU_B9_NshHrDwFAa-zcgvIkA1odLcfqX_l6Pl/exec";
+        const endpoint = "https://script.google.com/macros/s/AKfycbzfqfNK4qtQ-b_hmAAKQacT3_rnNBGyFsaIkfQT12vi1Y9tpfiNJTEUP7HTVEJ93PR-/exec";
         var settei="0";
         $(document).ready(function () {
             if(settei=="0"){
@@ -117,8 +117,9 @@
                                  document.body.style.backgroundColor = "#99FF99";
                              }
                              var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10% 5%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h5><div class="" style="text-align: center; margin-top: 15%;">会員番号：'
-                             var str2 = '</div></h5></div></div>'
-                             document.getElementById("area").innerHTML = str1 + out.rslt + str2
+                             var str2 = '</div></h5><h5><div class="" style="text-align: center; margin-top: 3%;">会員氏名：'
+                             var str3 = '</div></h5></div></div>'
+                             document.getElementById("area").innerHTML = str1 + out.rslt + str2 + out.name + str3
                           }
                         },
                         error: function(){
