--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                              }else{
                                  document.body.style.backgroundColor = "#99FF99";
                              }
-                             var str1 = '<div style="border-style: double;margin: 20% 10%; padding: 10% 5%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h5><div class="" style="text-align: center; margin-top: 15%;">会員番号：'
-                             var str2 = '</div></h5><h5><div class="" style="text-align: center; margin-top: 3%;">会員氏名：'
+                             var str1 = '<div style="border-style: double;margin: 10% 10%; padding: 10% 5%;"><div><h4><div style="text-align: center;font-family:Comic Sans MS;font-weight:bold;">トランポリンハウスNORI×NORI</div></h4><h5><div class="" style="text-align: center; margin-top: 15%;">会員番号：'
+                             var str2 = '</div></h5><h5><div class="" style="text-align: center; margin-top: 3%;">氏名：'
                              var str3 = '</div></h5></div></div>'
                              document.getElementById("area").innerHTML = str1 + out.rslt + str2 + out.name + str3
                           }
