--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         },
                         success: out => {
                           if(out.rslt=="###"){
-                             document.getElementById('liff-message').innerHTML = '初回登録設定画面';
+                             document.getElementById('liff-message').innerHTML = '登録画面';
                              document.getElementById("liff-message").style = "text-align:center;"
                              document.getElementById("area").innerHTML = '<form class="w-75 mx-auto"><p id="liff-message"></p><p id="liff-message2"></p><div class="mt-2">氏名(漢字)</div><div><input class="form-control w-100 mt-1" name="name" required=""></div><div class="mt-2">電話番号</div><div><input class="form-control w-100 mt-1" name="tel" required=""></div><div class="mt-2">会員番号</div><div><input class="form-control w-100 mt-1" name="no" placeholder="会員証の番号を入力" required=""></div><input type="button" class="mt-4 btn btn-primary" value="登録" onclick="submit_push()"></form>';
                           }else{
